syntax = "proto2";
package proto;
option java_outer_classname = "ChatMessageProto";
message ChatMessage {
    required int64 timestamp = 1;
    optional int64 userID = 2;
    optional int64 groupID = 3;
    optional string content = 4;
    optional bytes image = 5;
}
